--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,7 @@ code {
 }
 
 .theme-dark {
+    --hover-brightness: saturate(1.1) brightness(1.2);
     --buff-panel-border: 3px solid var(--popup-background-color);
     --text-shadow: -1px 0 #00000040, 0 1px #00000040, 1px 0 #00000040, 0 -1px #00000040;
     --extra-brightness: brightness(1.4);
@@ -74,6 +75,7 @@ code {
 }
 
 .theme-light {
+    --hover-brightness: saturate(1.1) brightness(1.05);
     --buff-panel-border: 1px solid var(--borderColor2);
     --text-shadow: none;
     --extra-brightness: none;
@@ -89,7 +91,7 @@ code {
     --borderColor2: rgb(204, 204, 204);
     --borderColorSearchBar: rgba(204, 204, 204, 0.5);
     --bannerBorderColor: #d0d0d0;
-    --button-selected: rgb(248, 248, 248);
+    --button-selected: rgb(250, 250, 250);
     --contentBackground: #fff;
     --buttonsBackground: rgb(235, 235, 235);
     --dropdownOptionBlurred: rgb(235, 235, 235);
